code-gen/templates/cde/region/custom-resources/ext-ingresses.yaml
# NOTES:
# - This custom patch is not applied to the cluster by default.
#
# - Adding this patch will expose admin services listed below
#   to the public.
#
# - Make sure WAF is enabled for all the public endpoints before
#   applying this patch.
#

# This defines the external ingress for the pingdelegator service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingdelegator-ext-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - ext-pingdelegator.${DNS_ZONE}
  rules:
  - host: ext-pingdelegator.${DNS_ZONE}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingdelegator
            port:
              number: 1443

---

# This defines the external ingress for the pingaccess-was admin service

# FIXME: PDO-2918 - ingress >=v1.0.0 dropped support for v1beta1 so should use v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-was-admin-ext-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - ext-pingaccess-was-admin.${DNS_ZONE}
  rules:
  - host: ext-pingaccess-was-admin.${DNS_ZONE}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingaccess-was-admin
            port:
              number: 9000

---

# This defines the external ingress for the pingaccess admin service

# FIXME: PDO-2918 - ingress >=v1.0.0 dropped support for v1beta1 so should use v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-admin-ext-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
    - hosts:
        - ext-pingaccess-admin-api.${DNS_ZONE}
  rules:
    - host: ext-pingaccess-admin-api.${DNS_ZONE}
      http:
        paths:
          - path: /pa-admin-api/
            pathType: Prefix
            backend:
              service:
                name: pingaccess-admin
                port:
                  number: 9000

---

# This defines the external ingress for the pingfederate admin services.

# FIXME: PDO-2918 - ingress >=v1.0.0 dropped support for v1beta1 so should use v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-admin-ext-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
    - hosts:
        - ext-pingfederate-admin-api.${DNS_ZONE}
  rules:
    - host: ext-pingfederate-admin-api.${DNS_ZONE}
      http:
        paths:
          - path: /pf-admin-api/
            pathType: Prefix
            backend:
              service:
                name: pingfederate-admin
                port:
                  number: 443

---

# This defines the external ingress for the pingdirectory REST API and SCIM service

# FIXME: PDO-2918 - ingress >=v1.0.0 dropped support for v1beta1 so should use v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingdirectory-http-ext-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - ext-pingdirectory.${DNS_ZONE}
  rules:
  - host: ext-pingdirectory.${DNS_ZONE}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingdirectory-http
            port:
              number: 1443
